@@ -9,7 +9,7 @@
  * @subpackage 	Support\Styles
  * @copyright   Copyright (c) 2022, WeCodeArt Framework
  * @since 		5.0.0
- * @version		5.0.0
+ * @version		5.6.1
  */
 
 namespace WeCodeArt\Support\Styles;
@@ -72,7 +72,7 @@ final class Sanitize {
 	 */
 	public static function color( string $value = '' ) {
 		// Is CSS Variable
-		$is_var = ( strpos( $value, 'var' ) !== false );
+		$is_var = ( strpos( $value, 'var(' ) !== false );
 	
 		if ( $is_var ) {
 			return sanitize_text_field( $value );
