@@ -1,3 +1,10 @@
+<?php
+/**
+ * Title: Author Box
+ * Slug: wecodeart/author-box
+ * Categories: wecodeart
+ */
+?>
 <!-- wp:group {"backgroundColor":"light","className":"px-3 px-lg-4 py-3 py-lg-5 my-5 rounded"} -->
 <div class="wp-block-group px-3 px-lg-4 py-3 py-lg-5 my-5 rounded has-light-background-color has-background">
     <!-- wp:columns {"className":"gap-4"} -->
