@@ -1,8 +1,0 @@
-<!-- wp:group {"className":"gap-1 mb-3","layout":{"type":"flex","flexWrap":"wrap"}} -->
-<div class="wp-block-group gap-1 mb-3">
-    <!-- wp:post-author {"isLink":true,"showAvatar":false} /-->
-    <!-- wp:post-date /-->
-    <!-- wp:post-terms {"term":"category"} /-->
-    <!-- wp:post-comments-link /-->
-</div>
-<!-- /wp:group -->
