@@ -31,5 +31,10 @@
     <!-- wp:query-pagination {"className":"mb-5"} -->
     <!-- wp:query-pagination-numbers /-->
     <!-- /wp:query-pagination -->
+    <!-- wp:query-no-results -->
+    <!-- wp:paragraph {"className":"mb-5","placeholder":"No results."} -->
+    <p class="mb-5">No results.</p>
+    <!-- /wp:paragraph -->
+    <!-- /wp:query-no-results -->
 </div>
 <!-- /wp:query -->
